# routes/projectRoutes.js
@@ -1,0 +1,25 @@
+// /routes/projectRoutes.js
+const express = require('express');
+const {
+  getProjects,
+  getProject,
+  createProject,
+  updateProject,
+  deleteProject
+} = require('../controllers/projectController');
+const { protect } = require('../middleware/auth');
+
+const router = express.Router();
+
+router.use(protect); // protect projects
+
+router.route('/')
+  .get(getProjects)
+  .post(createProject);
+
+router.route('/:id')
+  .get(getProject)
+  .put(updateProject)
+  .delete(deleteProject);
+
+module.exports = router;
